recursion.hanoi.lessons.recursion.hanoi.InterleavedHanoi.scala.error
InterleavedHanoi:7: error: missing arguments for method move in class HanoiEntity;
follow this method with `_' if you want to treat it as a partially applied function
      move src1 dst
      ^InterleavedHanoi:8: error: missing arguments for method move in class HanoiEntity;
follow this method with `_' if you want to treat it as a partially applied function
      move src2 dst
      ^InterleavedHanoi:12: error: not found: value hanoi
      hanoi ((n - 1), src1, dst, other)
      ^InterleavedHanoi:14: error: not found: value hanoi
      hanoi ((n - 1), src2, dst, src1)
      ^